--- a/subprojects/docs/src/docs/userguide/osgiPlugin.adoc
+++ b/subprojects/docs/src/docs/userguide/osgiPlugin.adoc
@@ -63,7 +63,7 @@ The OSGi plugin adds the following tasks to the project:
 [[sec:osgi_convention_object]]
 === Convention object
 
-The OSGi plugin adds the following convention object: api:org.gradle.api.plugins.osgi.OsgiPluginConvention[] 
+The OSGi plugin adds the following convention object: api:org.gradle.api.plugins.osgi.OsgiPluginConvention[]
 
 
 [[sec:osgi_convention_properties]]
@@ -100,4 +100,4 @@ The classes in the classes dir are analyzed regarding their package dependencies
             </sample>
 ++++
 
-The first argument of the instruction call is the key of the property. The other arguments form the value. To learn more about the available instructions have a look at the http://www.aqute.biz/Bnd/Bnd[BND tool].
+The first argument of the instruction call is the key of the property. The other arguments form the value. To learn more about the available instructions have a look at the http://bnd.bndtools.org/[BND tool].
